--- a/package.json
+++ b/package.json
@@ -4,14 +4,21 @@
   "description": "",
   "main": "./dist/server.js",
   "scripts": {
-    "build": "tsc",
-    "start": "node ./dist/server.js",
+    "build": "rimraf dist && tsc",
+    "start": "nodemon ./src/server.ts",
     "dev": "ts-node-dev --respawn --transpile-only ./src/server.ts",
     "lint": "npm eslint .",
     "lint:fix": "npx eslint src --fix",
+    "ts.check": "tsc --project tsconfig.json",
+    "add-build": "git add dist",
     "prettier": "prettier --ignore-path .gitignore --write \"./src/**/*.+(js|ts|json)\"",
     "prettier:fix": "npx prettier --write src"
   },
+  "pre-commit": [
+    "ts.check",
+    "build",
+    "add-build"
+  ],
   "keywords": [],
   "author": "",
   "license": "ISC",
@@ -40,7 +47,9 @@
     "@types/node": "^20.14.9",
     "eslint": "^8.57.0",
     "nodemon": "^3.1.4",
+    "pre-commit": "^1.2.2",
     "prettier": "^3.3.2",
+    "rimraf": "^6.0.1",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.5.2",
     "typescript-eslint": "^7.14.1"
