--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.15.0",
     "mongoose": "^8.4.4",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "zod": "^3.23.8"
   },
